[gd_scene load_steps=20 format=2]

[ext_resource path="res://Sprites/terror_bird.png" type="Texture" id=1]
[ext_resource path="res://TerrorBird.gd" type="Script" id=2]
[ext_resource path="res://UpdatedHurt.tres" type="Material" id=3]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 381, 0, 127, 88 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 1016, 0, 127, 88 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 1143, 0, 127, 88 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 127, 88 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 127, 0, 127, 88 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 254, 0, 127, 88 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 508, 0, 127, 88 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 635, 0, 127, 88 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 762, 0, 127, 88 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 889, 0, 127, 88 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Alert",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 22, 24.5 )

[sub_resource type="CircleShape2D" id=16]
radius = 30.0167

[sub_resource type="CircleShape2D" id=17]
radius = 30.0167

[sub_resource type="Animation" id=18]
resource_name = "Hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="TerrorBird" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 3 )
frames = SubResource( 4 )
animation = "Idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, 15.5 )
shape = SubResource( 5 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerDetection"]
polygon = PoolVector2Array( -298, -115, -301, 43, 107, 39, 106, -16 )

[node name="AlertTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -4, 15 )
shape = SubResource( 16 )

[node name="AttackArea2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2"]
position = Vector2( -4, 15 )
shape = SubResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 18 )
anims/RESET = SubResource( 19 )

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 3, 15 )
enabled = true
cast_to = Vector2( -60, 0 )

[node name="JumpHeight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 100 )

[node name="LineOfSight" type="RayCast2D" parent="."]
position = Vector2( 106, -3 )
enabled = true
cast_to = Vector2( -406, 0 )

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="timeout" from="AlertTimer" to="." method="_on_AlertTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="body_entered" from="AttackArea2" to="." method="_on_AttackArea2_body_entered"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
